package parcial;

public enum DocumentType {
    BOOK, MAGAZINE, ARTICLE, PAPER;
}
