@startuml
package "parcial" {
    class Author {
        - id: int
        - fullName: String

        + Author(int id, String fullName)
        + getFullName(): String
        + getId(): int
        + toString(): String
    }

    enum DocumentType {
        BOOK
        MAGAZINE
        ARTICLE
        PAPER
    }

    class Document {
        - id: int
        - title: String
        - publicationYear: int
        - type: DocumentType
        - keywords: List<String>

        + Document(int id, String title, int publicationYear, DocumentType type)
        + getId(): int
        + getKeywords(): List<String>
        + addKeyword(String keyword): void
        + removeKeyword(String keyword): void
        + toString(): String
    }

    class DocumentAuthor {
        - documentId: int
        - authorId: int

        + DocumentAuthor(int documentId, int authorId)
        + getDocumentId(): int
        + getAuthorId(): int
        + toString(): String
    }

    class LibraryManager {
        - documents: List<Document>
        - authors: List<Author>
        - authorDocuments: List<DocumentAuthor>
        - scanner: Scanner

        + LibraryManager()
        + displayMenu(): void
        - addDocument(): void
        - addAuthorToDocument: void
        - addAuthor(): void
        - addKeywordsToDocument(): void
        - associateAuthorWithDocument(): void
        - searchDocumentById(): void
        - searchAuthorById(): void
        - getAuthorsByDocumentId(int documentId): List<Author>
        - getDocumentsByAuthorId(int authorId): List<Document>
        - getDocumentById(int id): Document
        - getAuthorById(int id): Author
        - listAllDocuments(): void
  
    class LibrarySimulation {
        + main(String[] args): void
    }
}

LibraryManager -- "0..*" Document : manages
LibraryManager -- "0..*" Author : manages
LibraryManager -- "0..*" DocumentAuthor : manages
Author "1" -l- "0..*" DocumentAuthor : contains
Document "1" -r- "0..*"DocumentAuthor : contains
DocumentType -r- LibraryManager
LibrarySimulation -- LibraryManager : creates

@enduml
